--- a/package.json
+++ b/package.json
@@ -40,6 +40,12 @@
   "devDependencies": {
     "add": "^2.0.6",
     "customize-cra": "^1.0.0",
+    "eslint": "^8.21.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
     "react-app-rewired": "^2.2.1"
   }
 }
