UPDATE -Se agregan estilos a las pantallas de detalle y buscqueda y listado de prodcutos

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
 	"rules": {
 		"no-unused-expressions": "warn",
 		"no-unused-vars": "warn",
-		"semi-spacing": 2
+		"semi-spacing": 2,
+		"react/prop-types": "off"
 	}
 }
