--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
 	"devDependencies": {
 		"add": "^2.0.6",
 		"customize-cra": "^1.0.0",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.6",
 		"eslint": "^8.21.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0",
@@ -51,6 +53,8 @@
 		"eslint-plugin-n": "^15.2.4",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-react": "^7.30.1",
+		"jest-mock-axios": "^4.6.1",
+		"jest-watch-typeahead": "^0.6.5",
 		"prettier": "^2.7.1",
 		"react-app-rewired": "^2.2.1"
 	}
